--- a/TravelOrderResolver-Client/package.json
+++ b/TravelOrderResolver-Client/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@nebular/eva-icons": "11.0.0",
+    "@nebular/eva-icons": "^11.0.0",
     "@nebular/theme": "^11.0.0",
     "eva-icons": "^1.1.3",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.7.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
