--- a/Models/Alban/NER/spacy/output/model-best/config.cfg
+++ b/Models/Alban/NER/spacy/output/model-best/config.cfg
@@ -1,6 +1,6 @@
 [paths]
 train = "./data/train.spacy"
-dev = "./data/test.spacy"
+dev = "./data/val.spacy"
 vectors = null
 init_tok2vec = null
 
@@ -10,7 +10,7 @@ seed = 0
 
 [nlp]
 lang = "fr"
-pipeline = []
+pipeline = ["tok2vec","ner"]
 batch_size = 1000
 disabled = []
 before_creation = null
@@ -20,6 +20,47 @@ tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 vectors = {"@vectors":"spacy.Vectors.v1"}
 
 [components]
+
+[components.ner]
+factory = "ner"
+incorrect_spans_key = null
+moves = null
+scorer = {"@scorers":"spacy.ner_scorer.v1"}
+update_with_oracle_cut_size = 100
+
+[components.ner.model]
+@architectures = "spacy.TransitionBasedParser.v2"
+state_type = "ner"
+extra_state_tokens = false
+hidden_width = 64
+maxout_pieces = 2
+use_upper = true
+nO = null
+
+[components.ner.model.tok2vec]
+@architectures = "spacy.Tok2VecListener.v1"
+width = ${components.tok2vec.model.encode.width}
+upstream = "*"
+
+[components.tok2vec]
+factory = "tok2vec"
+
+[components.tok2vec.model]
+@architectures = "spacy.Tok2Vec.v2"
+
+[components.tok2vec.model.embed]
+@architectures = "spacy.MultiHashEmbed.v2"
+width = ${components.tok2vec.model.encode.width}
+attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
+rows = [5000,1000,2500,2500]
+include_static_vectors = false
+
+[components.tok2vec.model.encode]
+@architectures = "spacy.MaxoutWindowEncoder.v2"
+width = 96
+depth = 4
+window_size = 1
+maxout_pieces = 3
 
 [corpora]
 
@@ -84,6 +125,10 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
+ents_f = 1.0
+ents_p = 0.0
+ents_r = 0.0
+ents_per_type = null
 
 [pretraining]
 
